@@ -51,7 +51,7 @@ public:
     }
     virtual ~V8CustomSQLTransactionErrorCallback();
 
-    virtual bool handleEvent(SQLError*);
+    virtual void handleEvent(SQLError*);
 
 private:
     V8CustomSQLTransactionErrorCallback(v8::Local<v8::Object>, Frame*);
